--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="fonts/font-icons.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-    <title>Login</title>
+    <title>Mikrotik GenKey</title>
 </head>
 
 <body>
